--- a/Models/-SVC/2024.02.20_SingVisio.md
+++ b/Models/-SVC/2024.02.20_SingVisio.md
@@ -382,3 +382,277 @@ This task benefits us in exploring the impact of the melody of the source that s
 Pair-wisely comparing SVC under two different conditions of the song at different diffusion steps.
 
 This task facilitates us to explore the impact of the content information conveyed in the song that should be maintained on the converted results of SVC, particularly in terms of MCD. (C1, C3)
+
+## 5·Explainer System
+
+Fig.~[fig:explainer_system](#fig:explainer_system) shows the overview of the explainer system which consists of five components: ***Control Panel*** allows users to modify mode and choose data for visual analysis; ***Step View*** provides users with an overview of the diffusion generation process; ***Comparison View*** makes it easy for users to compare converted results between different conditions; ***Projection View*** helps users observe the trajectory of diffusion steps with or without conditions; ***Metric View*** displays objective metrics evaluated on the diffusion-based SVC model, enabling users to interactively examine metric trends across diffusion steps.
+
+### Control Panel
+
+\label{sec:control_panel}
+
+The control panel consists of six components, including two drop-down boxes to enable users to select display mode and projection embedding, three checkboxes to select source singer, source song, and target singer, and a step controller to enable users to control the diffusion step.
+
+% 
+-  
+**Display Mode**
+
+We design five types of display modes, including Step Comparison, Source Singer Comparison, Song Comparison, Target Singer Comparison, and Metric Comparison.
+
+Users can click the drop-down box of "Display Mode " to choose a specific model.
+
+-  **Step Comparison**
+
+This mode primarily focuses on step-wise comparing the diffusion steps in the generation process.
+
+It (1) provides an animation of random noise gradually refined for users to have an overview of the whole denoising process in ***Step View***, (2) enables users to adaptively select and compare the generated results from different diffusion steps in ***Comparison View***.
+
+-  **Metric Comparison**
+
+This mode presents five objective evaluation metric results of the diffusion-based SVC model represented by a bar chart.
+
+It (1) enables users to click on a specific metric bar and then the system filters out an example that gains the best on the corresponding metric and displays metric curves along diffusion steps in the ***Comparison View***, (3) enables users to hover over and slide the mouse along the step axis of the metric curve, and then system will display the values of that metric at different steps in the ***Comparison View*** while synchronously showing the generated results at different steps in the ***Step View***.
+
+-  **Source Singer Comparison**
+
+This mode focuses on the pair-wise comparison of converting two different source singers' audio with the same song to the same target singer.
+
+It (1) allows users to select \uline{two different source singers}, a source song and a target singer, (2) provides the details (including Mel spectrogram, pitch contour, and audible audio) of the two source audio and the target audio in the ***Comparison View***, (3) presents two conversion animations wherein random noise undergoes gradual refinement to transform into the singing voice of the target singer in the ***Step View***.
+
+This mode is only available in the advanced version.
+
+-  **Song Comparison**
+
+This mode focuses on the pair-wise comparison of converting \uline{two different source audios} that are derived from the same singer but contain different songs to the same target singer.
+
+It (1) allows users to select a source singer, a target singer but two songs, (2) provides the details (including Mel spectrogram, pitch contour, and audible audio) of the two source singers' audio and the target singer's audio in the ***Comparison View***, (3) supplies two conversion animations illustrating the progressive refinement of random noise into the singing voice of the target in the ***Step View***.
+
+This mode is only available in the advanced version.
+
+-  **Target Singer Comparison**
+
+This mode focuses on the pair-wise comparison of converting the same source singing voice (also means the same song) to \uline{two different target singers}.
+
+It (1) enables users to select a source singer and a source song, but two target singers, (2) provides the details (including Mel spectrogram, pitch contour, and audible audio) of the source singer's audio, and two target singers' audio in the ***Comparison View***, (3) provides the two corresponding conversion animations of random noise gradually refined to the target singer singing voice in the ***Step View***.
+
+This mode is only available in the advanced version.
+
+% 
+-  
+**Source Singer/Source Song/Target Singer**
+
+Three drop-down boxes offer users options for source singer, source song, and target singer.
+
+% 
+-  
+**Projection Embedding**
+
+A drop-down box to enable users to choose different projection embeddings from different layers.
+
+Then, the system displays 2D t-SNE visualization results of the high-dimensional diffusion steps in the ***Projection View***.
+
+Specifically, the projection embedding can be the diffusion steps, the combined embeddings of the step and noise, or step, noise and conditions.
+
+These embeddings can come from the first, middle, or final residual layer in the diffusion model, as illustrated in Fig.~[fig:diffwavenetsvc](#fig:diffwavenetsvc) of [app:svc_model](#app:svc_model).
+
+% 
+-  
+**Components**
+
+Two checkboxes, labeled 'F0 contour' and 'Frequency,' allow users to control the display of these components in the Mel spectrogram.
+
+Additionally, the frequency bar lets users adjust the frequency range for display.
+
+% 
+-  
+**Step Controller**
+
+The Step Controller includes (1) a step slider to smoothly control the diffusion step, (2) a tool-tip to display or input a specific step number, and (3) a button named `Pin' that enables users to add a specific step's generated result in the ***Comparison View***.
+
+### Step View
+
+This view enables users to visualize the whole generation process of diffusion in the context of SVC tasks, which means users can observe how the spectral characteristics change over time as noise is subsequently removed, leading to the desired SVC.
+
+Specifically, it can be observed that the Mel spectrogram transitions from being completely noisy to gradually becoming clearer, and the fundamental frequency curve also transforms from scattered points into a smooth curve.
+
+The audio also undergoes a process of gradual optimization from being pure noise to having improved sound quality and intelligibility. 
+
+The control panel, mentioned earlier, allows users to interact with the diffusion process by smoothly sliding the step slider.
+
+Users can adjust the diffusion time step to observe the intermediate results of the generation process, enlarge the Mel spectrogram to observe detailed information through a brush operation, and restore it back to the original Mel spectrogram using the refresh button in the top right corner in the ***Step View***.
+
+In the *Step Comparison* and *Condition Comparison* modes, the content presented in the ***Step View*** is slightly different.
+
+In the *Step Comparison* mode, we focus on comparing and analyzing the converted results from different steps, so only one diffusion process animation is displayed in the view.
+
+While, in the *Condition Comparison* mode, the main objective is to compare the conversion results under different conditions, e.g., source singer, song, and target singer.
+
+At this time, the ***Step View*** shows pair-wise diffusion process animations for two different conditions.
+
+![](figs/metrics_with_notes.pdf)
+
+<a id="fig: metric_curve ">The left part is the ***Metric View*** with MCD metric selected.
+
+The right part is the corresponding "Metric Curve over Diffusion Step" for the best-performing sample on the MCD metric.
+
+The red annotation in the right part explains the tendencies of metric curves.
+% \lmxue{update this figure}</a>
+
+### Comparison View
+
+To facilitate a more convenient and detailed observation of the intermediate results generated by the diffusion model, we introduce a ***Comparison View***.
+
+Moreover, the comparison view differs between the basic and advanced versions.
+
+In the basic version, the comparison view initially displays a step comparison matrix, highlighting differences in Mel spectrograms between pairs of steps in the diffusion model, as shown in Fig.~[fig:explainer_system](#fig:explainer_system).
+
+Darker colors in the step comparison matrix indicate larger differences, while lighter colors represent smaller ones.
+
+Users can add specific steps to the matrix using the pin feature in the control panel or by clicking data points in the projection view.
+
+By clicking on the comparison matrix, Mel spectrograms and audio of the corresponding two steps can be displayed in the comparison view for detailed comparison.
+
+In the advanced version, we directly display three Mel spectrograms from three steps by default.
+
+Besides, users can select any step to replace the displayed three steps.
+
+It enables users to compare differences among three steps, broadening the scope of comparison.
+
+It is noted that along with the Mel spectrogram, the corresponding audible audio, and fundamental frequency (F0) contour are also displayed in the Comparison View.
+
+All the information related to a clip of audio forms a basic block referred to as the "basic display unit'', as shown in the below two Mel spectrograms in the comparison view in Fig.~[fig:explainer_system](#fig:explainer_system)
+
+On this basic display unit, we can observe the range of the F0 and the pattern of the F0 contour.
+
+Through the brush operation, we can synchronously magnify all Mel spectrograms illustrated in this view, thus enabling a more detailed comparison and examination of the spectral differences.
+
+When there is more than one basic display unit, users can select the checkboxes in the top left corner of any two basic display units.
+
+The page will then pop up the visualization of the difference in the Mel spectrogram between these two basic display units, 
+
+allowing for a clearer and more convenient comparison.
+
+Specifically, the differences are represented by colors.
+
+Warmer colors like reds and oranges signify larger differences, while cooler colors like blues and greens represent smaller differences between the two selected Mel spectrograms.
+
+This visualization aids in identifying which parts of the Mel spectrogram are significantly refined during the step-by-step generation process, highlighting areas that may require further investigation by algorithm researchers.
+
+Furthermore, the components displayed in the ***Comparison View*** differ between the *Step Comparison Mode* and the *Condition Comparison Mode*.
+
+The *Step Comparison Mode* is primarily used to compare the results of different diffusion steps.
+
+In this mode, the ***Comparison View*** will display basic display units from three different steps, based on the steps selected by the user.
+
+The relative position of different basic display units (corresponding to different steps) can be directly adjusted by dragging.
+
+On the other hand, the *Condition Comparison Mode* sports a similar layout but mainly compares the results of SVC under different conditions.
+
+In this mode, the ***Comparison View*** primarily displays the basic display units corresponding to different audios of the source and target singers selected by users.
+
+Additionally, in *Metric Comparison Mode*, the ***Comparison View*** illustrates the metric curve over the diffusion step, which is described in Section~[sec:metric_view](#sec:metric_view).
+
+### Projection View
+
+\label{sec:projection-view}
+
+High-dimensional hidden features can be challenging to interpret directly. t-SNE reduces the dimensionality by projecting the hidden feature embedding into a lower-dimensional space, allowing researchers to gain insights into the intricate structure and relationships within the high-dimensional space.
+
+By projecting high-dimensional step embeddings in the diffusion model into a lower-dimensional space, t-SNE reveals patterns and trajectories of the diffusion steps, enabling a visual exploration of the dynamic evolution of the diffusion process.
+
+Consequently, we design ***Projection View*** to present the two-dimensional space obtained by projecting high-dimensional diffusion step embeddings (i.e., the step features in Fig.~[fig:diffwavenetsvc](#fig:diffwavenetsvc) of [app:svc_model](#app:svc_model)), as shown in Fig.~[fig:explainer_system](#fig:explainer_system).
+
+Each point represents a diffusion step, and all 1000 diffusion steps together form a trajectory in space.
+
+The boundary of this trajectory is highlighted with a gradient color scheme ranging from blue to red, reflecting the progression of the generation process.
+
+Users can hover their mouse over the points and slide to inspect the step trajectory.
+
+While sliding the mouse, users can simultaneously observe the SVC results transition from a coarse state to a fine state in ***Step View***. 
+
+By scrolling the mouse wheel, they can zoom in or out on the points in the space to explore the distribution of the data points.
+
+By clicking on a specific step point, a basic display unit corresponding to the step will be added into the ***Comparison View***. 
+
+As described in Section~[sec:control_panel](#sec:control_panel), the drop-down menu of projection embedding in the control panel provides multiple projection embedding sources, including not only the vanilla diffusion step but also the combination of the diffusion step with noise and condition, as indicated by the red solid dots in Fig.~[fig:diffwavenetsvc](#fig:diffwavenetsvc) of [app:svc_model](#app:svc_model).
+
+By examining the projection embedding results of combining diffusion step with noise and condition, users can compare the differences in diffusion step trajectories under different condition scenarios.
+
+Additionally, we propose a novel sampling strategy called interval clustering center sampling.
+
+The specific steps are as follows: (a) Set the number of steps to be sampled, denoted as $S$. (b) Divide the total interval into T/S sub-intervals, each sampling one sample. (c) Perform k-means clustering on all samples within each sub-interval to find the central point, and then calculate the distance from all samples to this center, and finally select the sample closest to the center as the representative sample.
+
+The clustering approach ensures that each sub-interval selection considers global temporal embedding information.
+
+Furthermore, by clustering and selecting the step closest to the center, the chosen steps are highly representative. 
+
+### Metric View
+
+\label{sec:metric_view}
+
+***Metric View*** is designed to show the overall objective metrics evaluated on the model.
+
+The five metrics, including Dembed, F0CORR, FAD, F0RMSE, and MCD, are divided into two groups based on whether the values of the metrics are positively or negatively correlated with model performance and drawn in histograms.
+
+Here, the labels of the x-axis denote different metrics, and the labels of the y-axis are scores (the higher the better) and log scores (the lower the better).
+
+Each bar in the histogram is labeled with the calculated result corresponding to the metric.
+
+In the top right corner of this view, there is a button represented by a question mark.
+
+When users click this button, a tip box will appear providing descriptions of the definitions of each metric.
+
+The ***Metric View*** represents an average of all samples within the testing data pool, providing a comprehensive overview of the model performance with five objective metrics.
+
+Upon hovering over a particular metric, the system automatically identifies and selects the best-performing sample.
+
+This selection triggers a detailed visualization of the diffusion step for that sample within the ***Projection View***.
+
+Additionally, for the chosen sample, the system dynamically computes and displays evaluation metrics, which are then used to plot the "Metric Curve over Diffusion Step" in ***Comparison View***, as shown in Fig.~[fig: metric_curve ](#fig: metric_curve ). 
+
+At the top of the curve, five legends denoted as five different metrics are present with distinct colors.
+
+The x-axis shows different steps ranging from 999 to 0 as diffusion generates data, and the y-axis displays scores for evaluation metrics.
+
+The user can check the specific metric value for each step by hovering on the curve.
+
+Also, the step preview will update as the cursor moves on the curve.
+
+The interactive feature of ***Metric View*** allows users to not only see aggregate metric performance but also delve into the 
+variation trend of metrics with diffusion step during the diffusion generation process.
+
+### Implementation Details
+
+The web application is designed to provide an interactive and user-friendly interface for visualizing spectrogram differences.
+
+It uses D3.js and TailwindCSS for the front-end, ensuring a clean and dynamic user interface.
+
+Specifically, D3.js handles the visualization, allowing for detailed and interactive spectrogram comparisons.
+
+TailwindCSS ensures a responsive and aesthetic design, enhancing user experience.
+
+The back-end is powered by Flask and Gunicorn, enabling efficient dynamic step sampling and efficient data retrieval with multiple workers.
+
+Specifically, Flask serves as the core framework, managing API requests and data processing.
+
+Gunicorn operates as the WSGI HTTP server, providing concurrency through multiple workers for fast data retrieval and processing.
+
+This architecture ensures that the application is both robust and scalable, capable of handling real-time spectrogram analysis and visualization efficiently.
+
+Mel spectrogram and Fundamental Frequency  Contour (F0 contour) are extracted from the audio using a signal processing algorithm.
+
+Mel spectrogram is a 2D representation with the dimensions of Time*Channel, where the time axis captures the progression of the audio signal over time, and the channel axis represents the frequency components or Mel bins, providing a comprehensive view of the signal's spectral content.
+
+The Mel spectrogram is color-coded to indicate the intensity or magnitude of different frequencies over time.
+
+Bright colors, such as yellow and red, represent high energy or the presence of specific frequencies, while darker colors represent lower energy or the absence of those frequencies.
+
+F0 contour is a key concept in the fields of speech processing and music analysis, especially in the study of prosody, intonation, and melody.
+
+It refers to the variation in the pitch of a voice over time.
+
+The fundamental frequency, or F0, is the lowest frequency of a periodic waveform and determines the pitch of the sound, which is one of the primary auditory attributes used to distinguish different sounds in speech and music.
+
+This contour line may be drawn as a continuous curve that rises and falls to depict changes in F0.
+
+The F0 contour line is colored red in this work, to distinguish it from the Mel spectrogram.
