--- a/Models/-SVC/2024.02.20_SingVisio.md
+++ b/Models/-SVC/2024.02.20_SingVisio.md
@@ -1076,3 +1076,39 @@ It provides diverse users with fresh learning experiences and valuable insights 
 
 \clearpage
 \appendix
+
+## 10·Metrics Definition
+
+\label{app:metircs}
+
+-   **Singer Similarity (Dembed)** quantitatively assesses the similarity between the timbre of the original singer's voice and the converted voice.
+
+It's calculated using the cosine similarity between feature vectors representing the timbre characteristics of the two voices.
+
+A higher similarity score indicates more timbre similarity. 
+% \xueyao{based on which pretrained model?}
+% \lmxue{described in Section3.3}
+
+-  **F0 Pearson Correlation Coefficient (F0CORR)**  measures the Pearson Correlation Coefficient between the F0 values of the converted singing voice and the target voice.
+
+It assesses the linear relationship between the F0 contours of the two voices.
+
+A higher F0CORR indicates a stronger correlation and better F0 similarity.
+
+-  **Fréchet Audio Distance (FAD)** is a reference-free evaluation metric to evaluate the quality of audio samples.
+
+FAD correlates more closely with human perception.
+
+A lower FAD score indicates a higher quality of the audio.
+
+-   **F0 Root Mean Square Error (F0RMSE)** measures the Root Mean Square Error of the Fundamental Frequency (F0) values between the converted singing voice and the target voice.
+
+It quantifies how accurately the F0 of the converted voice matches that of the target voice.
+
+A lower F0RMSE indicates better F0 accuracy.
+
+-   **Mel-cepstral Distortion (MCD)** assesses the quality of the generated speech by comparing the discrepancy between generated and ground-truth singing voice.
+
+It measures how different the two sequences of Mel cepstra are.
+
+A lower MCD indicates better quality.
