--- a/Models/-SVC/2024.02.20_SingVisio.md
+++ b/Models/-SVC/2024.02.20_SingVisio.md
@@ -1208,3 +1208,66 @@ The architecture of DiffWaveNetSVC is shown in Fig.~[fig:diffwavenetsvc](#fig:di
 \clearpage
 
 \end{document}
+
+## References
+
+[^Yang2023Diffusion]: Diffusion Models: A Comprehensive Survey of Methods and Applications. ACM Computing Surveys 2023.
+[^Zhang2023Text-to-Image]: Text-to-Image Diffusion Model in Generative {AI}: A Survey. arXiv:2303.07909.
+[^Xing2023Survey]: A Survey on Video Diffusion Models. arXiv:2310.10647.
+[^Xu2023Versatile]: Versatile Diffusion: Text, Images and Variations All in One Diffusion Model. IEEE/CVF International Conference on Computer Vision 2023.
+[^Rombach2022High-Resolution]: High-Resolution Image Synthesis With Latent Diffusion Models. Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition 2022.
+[^Ceylan2023Pix2video]: Pix2video: Video Editing Using Image Diffusion. IEEE/CVF International Conference on Computer Vision 2023.
+[^Chen2021WaveGrad]: {WaveGrad}: Estimating Gradients for Generative Audio Modeling. International Conference on Learning Representations 2021.
+[^Kong2020DiffWave]: {DiffWave}: A Versatile Diffusion Model for Audio Synthesis. International Conference on Learning Representations 2020.
+[^Liu2023AudioLDM]: {AudioLDM}: Text-to-Audio Generation With Latent Diffusion Models. arXiv:2301.12503.
+[^Huang2023Make-an-Audio]: {Make-an-Audio 2}: Temporal-Enhanced Text-to-Audio Generation. arXiv:2305.18474.
+[^Popov2021Grad-Tts]: {Grad-Tts}: A Diffusion Probabilistic Model for Text-to-Speech. International Conference on Machine Learning 2021.
+[^Shen2024NaturalSpeech]: {NaturalSpeech 2}: Latent Diffusion Models Are Natural and Zero-Shot Speech and Singing Synthesizers. International Conference on Learning Representations 2024.
+[^Liu2022DiffSinger]: {DiffSinger}: Singing Voice Synthesis via Shallow Diffusion Mechanism. AAAI Conference on Artificial Intelligence 2022.
+[^Schneider2023Moûsai]: Moûsai: Text-to-Music Generation With Long-Context Latent Diffusion. arXiv:2301.11757.
+[^Kahng2018Gan]: {GAN Lab}: Understanding Complex Deep Generative Models Using Interactive Visual Experimentation. IEEE Transactions on Visualization and Computer Graphics 2018.
+[^Lee2023Diffusion]: Diffusion Explainer: Visual Explanation for Text-to-Image Stable Diffusion. arXiv:2305.03509.
+[^Park2024Explaining]: Explaining Generative Diffusion Models via Visual Analysis for Interpretable Decision-Making Process. Expert Systems With Applications 2024.
+[^Liu2021DiffSVC]: {DiffSVC}: {A} Diffusion Probabilistic Model for Singing Voice Conversion. Automatic Speech Recognition and Understanding Workshop 2021.
+[^Zhang2023Leveraging]: Leveraging Content-Based Features From Multiple Acoustic Models for Singing Voice Conversion. Machine Learning for Audio Workshop, Neural Information Processing Systems 2023.
+[^Lu2024CoMoSVC]: CoMoSVC: Consistency Model-Based Singing Voice Conversion. arXiv:2401.01792.
+[^Goodfellow2020Generative]: Generative Adversarial Networks. Communications of the ACM 2020.
+[^Kingma2014Auto-Encoding]: Auto-Encoding Variational Bayes. International Conference on Learning Representations 2014.
+[^Sergios2022Diffusion]: Diffusion Models: Toward State-of-the-Art Image Generation. 
+[^O'Connor2024Diffusion]: Diffusion Models for Machine Learning: Introduction. 
+[^T{\"{u}}rk2009Application]: Application of Voice Conversion for Cross-Language Rap Singing Transformation. International Conference on Acoustics, Speech and Signal Processing 2009.
+[^Kobayashi2014Statistical]: Statistical Singing Voice Conversion With Direct Waveform Modification Based on the Spectrum Differential. International Speech Communication Association 2014.
+[^Kobayashi2015Statistical]: Statistical Singing Voice Conversion Based on Direct Waveform Modification With Global Variance. International Speech Communication Association 2015.
+[^Nachmani2019Unsupervised]: Unsupervised Singing Voice Conversion. International Speech Communication Association 2019.
+[^Chen2019Singing]: Singing Voice Conversion With Non-Parallel Data. Multimedia Information Processing and Retrieval 2019.
+[^Huang2022Comparative]: A Comparative Study of Self-Supervised Speech Representation Based Voice Conversion. IEEE Journal of Selected Topics in Signal Processing 2022.
+[^Liu2021FastSVC]: {FastSVC}: Fast Cross-Domain Singing Voice Conversion With Feature-Wise Linear Modulation. International Conference on Multimedia and Expo 2021.
+[^Takahashi2022Robust]: Robust One-Shot Singing Voice Conversion. arXiv.
+[^Luo2020Singing]: Singing Voice Conversion With Disentangled Representations of Singer and Vocal Technique Using Variational Autoencoders. International Conference on Acoustics, Speech and Signal Processing 2020.
+[^{SVC-Develop-Team}2023SoftSVC]: {{SoftSVC} VITS Singing Voice Conversion}. 
+[^Popov2022Diffusion-Based]: Diffusion-Based Voice Conversion With Fast Maximum Likelihood Sampling Scheme. International Conference on Learning Representations 2022.
+[^Choi2023Diff-HierVC]: {Diff-HierVC}: Diffusion-Based Hierarchical Voice Conversion With Robust Pitch Generation and Masked Prior for Zero-Shot Speaker Adaptation. International Speech Communication Association 2023.
+[^Wang2022Audit:]: {AUDIT:} Audio Editing by Following Instructions With Latent Diffusion Models. Neural Information Processing Systems 2022.
+[^Arrieta2020Explainable]: Explainable Artificial Intelligence ({XAI}): Concepts, Taxonomies, Opportunities and Challenges Toward Responsible {AI}. Information Fusion 2020.
+[^Hohman2018Visual]: Visual Analytics in Deep Learning: An Interrogative Survey for the Next Frontiers. IEEE Transactions on Visualization and Computer Graphics 2018.
+[^Wang2020Cnn]: {CNN Explainer}: Learning Convolutional Neural Networks With Interactive Visualization. IEEE Transactions on Visualization and Computer Graphics 2020.
+[^Strobelt2017LSTMVis]: {LSTMVis}: A Tool for Visual Analysis of Hidden State Dynamics in Recurrent Neural Networks. IEEE Transactions on Visualization and Computer Graphics 2017.
+[^Wang2018DQNViz]: {DQNViz}: A Visual Analytics Approach to Understand Deep Q-Networks. IEEE Transactions on Visualization and Computer Graphics 2018.
+[^Wang2021M2Lens]: {M2Lens}: Visualizing and Explaining Multimodal Models for Sentiment Analysis. IEEE Transactions on Visualization and Computer Graphics 2021.
+[^Liu2016Towards]: Towards Better Analysis of Deep Convolutional Neural Networks. IEEE Transactions on Visualization and Computer Graphics 2016.
+[^Norton2017Adversarial-Playground]: Adversarial-Playground: A Visualization Suite Showing How Adversarial Examples Fool Deep Learning. IEEE Symposium on Visualization for Cyber Security 2017.
+[^Wang2018GANViz]: {GANViz}: A Visual Analytics Approach to Understand the Adversarial Game. IEEE Transactions on Visualization and Computer Graphics 2018.
+[^Wang2022Extending]: Extending the Nested Model for User-Centric XAI: A Design Study on GNN-based Drug Repurposing. IEEE Transactions on Visualization and Computer Graphics 2022.
+[^Huang2023Singing]: The Singing Voice Conversion Challenge 2023. Automatic Speech Recognition and Understanding Workshop 2023.
+[^Zhang2023Amphion]: Amphion: An Open-Source Audio, Music and Speech Generation Toolkit. arXiv.
+[^Oord2016WaveNet]: {WaveNet}: {A} Generative Model for Raw Audio. Speech Synthesis Workshop 2016.
+[^Ho2020Denoising]: Denoising Diffusion Probabilistic Models. Neural Information Processing Systems 2020.
+[^Radford2023Robust]: Robust Speech Recognition via Large-Scale Weak Supervision. International Conference on Machine Learning 2023.
+[^Qian2022ContentVec]: {ContentVec}: An Improved Self-Supervised Speech Representation by Disentangling Speakers. International Conference on Machine Learning 2022.
+[^Jadoul2018Introducing]: Introducing {P}arselmouth: A {P}ython Interface to {P}raat. Journal of Phonetics 2018.
+[^Zhao2023ContextWing]: ContextWing: Pair-Wise Visual Comparison for Evolving Sequential Patterns of Contexts in Social Media Data Streams. Proceedings of the ACM on Human-Computer Interaction 2023.
+[^Rossi2010Evaluation]: Evaluation: A Systematic Approach. Canadian Journal of University Continuing Education 2010.
+[^Wang2022Opencpop]: {Opencpop}: {A} High-Quality Open Source Chinese Popular Song Corpus for Singing Voice Synthesis. International Speech Communication Association 2022.
+[^Yamagishi2019Cstr]: {CSTR VCTK Corpus}: English Multi-Speaker Corpus for CSTR Voice Cloning Toolkit (Version 0.92). University of Edinburgh. The Centre for Speech Technology Research 2019.
+[^Huang2021Multi-Singer]: {Multi-Singer}: Fast Multi-Singer Singing Voice Vocoder With {A} Large-Scale Corpus. ACM International Conference on Multimedia 2021.
+[^Zhang2022M4Singer]: M4Singer: {A} Multi-Style, Multi-Singer and Musical Score Provided Mandarin Singing Corpus. Neural Information Processing Systems 2022.
